fix border input on mobile

--- a/app/assets/stylesheets/components/order.scss
+++ b/app/assets/stylesheets/components/order.scss
@@ -95,6 +95,7 @@
   input:not([type=checkbox]), select {
     margin: 0 20px 20px 20px;
     height: 27px;
+    border: 1px solid #cccccc;
   }
 
   label {
